# Turtle5k

./: .gitignore  CMakeLists.txt  README.md  control_motors_no_joystick_twist.launch  control_motors_rpm_with_joystick.launch  control_motors_with_joystick_twist.launch  installOpenCV.sh  joystick_twist_test.launch  motor_driver_node.launch  package.xml
5KdriveWithVC/: 5KdriveV11.atsln  5KdriveV11.atsuo
5KdriveWithVC/Debug/: 5KdriveV11.hex  5KdriveV11.lss  5KdriveV11.map  5KdriveV11.srec  Makefile  makedep.mk
5KdriveWithVC/Release/: 5Kdrive.srec  5KdriveV11.elf  5KdriveV11.hex  makedep.mk
5KdriveWithVC/src/: main.c  main_with_velocity_control.c
Dezyne/HelloWorld/: DataFlow.dzn  HelloWorldApplication.cc  HelloWorldApplication.hh  HelloWorldPrinter.cc  HelloWorldPrinter.hh  HelloWorldSupplier.cc  HelloWorldSupplier.hh  main_prog.cc  makefile  makefile~  runtime.cc
Dezyne/RobotExample/: .project  Robot.dzn
Dezyne/SimHeaders/: Navigation.h  WheelDriver.h  WorldModel.h
Dezyne/Testle5k/: HelloWorldApp.hh  HelloWorldApplication.cc  HelloWorldApplication.hh  HelloWorldPrinter.cpp  HelloWorldPrinter.h  HelloWorldPrinter.hh  HelloWorldPrinterImpl.cpp  HelloWorldSupplier.hh  HelloWorldSupplierComp.hh  IHelloWorldPrinter.hh  IHelloWorldPrinterImpl.h  IHelloWorldSupplier.hh  Testle5k.sln  locator.hh  main.cc  make_output.txt  makefile
Dezyne_documentatie/: How to run simulation
Turtle5k-Dezyne/: ExternalInterfaces.dzn  Main.dzn  ReturnResults.dzn
Turtle5k-Dezyne/Code/: BallControl.cc  BallControl.hh  BallHandling.hh  Commands.cc  Commands.hh  Navigation.hh  PositioningControl.cc  PositioningControl.hh  Robot.cc  Robot.hh  Shooting.hh  Tactics.cc  Tactics.hh  WheelControl.cc  WheelControl.hh  WheelDriver.hh  WorldModel.hh  build_output.txt  iBallControl.hh  iControl.hh  iPositioningControl.hh  iShooting.hh  iWheelDriver.hh  iWorldModel.hh  main.cpp  makefile
Turtle_5K_IO_Board/: ADC.c  ADC.h  Beautifier.bat  Compass.c  Compass.h  Debug_UART.c  Debug_UART.h  Digital_Input.c  Digital_Input.h  Digital_Output.c  Digital_Output.h  Shoot_Level.c  Shoot_Level.h  Shoot_Puls.c  Shoot_Puls.h  Turtle_5K_IO_Board.atsln  Turtle_5K_IO_Board.atsuo  Turtle_5K_IO_Board.cproj  UART.c  UART.h  avr_compiler.h  global.h  main.c  usart_driver.c  usart_driver.h
Turtle_5K_IO_Board/Debug/: ADC.d  Debug_UART.d  Digital_Input.d  Digital_Output.d  Makefile  Shoot_Level.d  Turtle_5K_IO_Board.atsln  Turtle_5K_IO_Board.elf  Turtle_5K_IO_Board.hex  Turtle_5K_IO_Board.lss  Turtle_5K_IO_Board.map  Turtle_5K_IO_Board.srec  main.d  makedep.mk  usart_driver.d
Turtle_5K_IO_Board/Release/: ADC.d  Compass.d  Debug_UART.d  Digital_Input.d  Digital_Output.d  Makefile  Shoot_Level.d  Shoot_Puls.d  Turtle_5K_IO_Board.elf  Turtle_5K_IO_Board.hex  Turtle_5K_IO_Board.lss  Turtle_5K_IO_Board.map  Turtle_5K_IO_Board.srec  UART.d  main.d  makedep.mk
linuxScript/: ControlMotorsWithJoystickTwistStartupFile.sh  README.md
src/: RotateWheelsTest.cpp  a.out  calculate_velocity_node.cpp  joystick_to_rpm_multiarray_node.cpp  joystick_to_twist_node.cpp  motor_driver_node.cpp
turtle5k/: CMakeLists.txt  ballhandling.launch  camera.launch  compass.launch  createlaunch.sh  movement.launch  package.xml  shooting.launch  turtle5kTest.launch
turtle5k-ros/devel/: .catkin  .rosinstall  setup.sh
turtle5k-ros/src/: turtle5k.launch
turtle5k-ros/src/turtle5k/: CMakeLists.txt
turtle5k-ros/src/turtle5k/msg/: ShootingLever.msg
turtle5k-ros/src/turtle5k/src/: Ball_Detection.cpp  Shooting.cpp  Strategy.cpp  WheelControl.cpp  World.cpp  ballcontrol.cpp  ballhandling.cpp  compass.cpp  goaldetector.cpp  pathfinding.cpp  shooting.cpp  strategy.cpp  wheelcontrol.cpp
turtle5k/devel/: .catkin  .rosinstall  setup.sh
turtle5k/devel/lib/pkgconfig/: turtle5k.pc
turtle5k/devel/lib/turtle5k/: ball_detection  ballhandling  localisation  pathfinding  shooting  strategy  wheelcontrol  world
turtle5k/devel/share/turtle5k/cmake/: turtle5kConfig.cmake
turtle5k/launch/: fieldtest.launch  t5k.launch  turtle5k.launch
turtle5k/msg/: BallHandling.msg  BallHandlingMessage.msg  CompassMessage.msg  Movement.msg  MovementMessage.msg  ShootMessage.msg  ShootingLeverMessage.msg  WorldMessage.msg
turtle5k/src/: ObjectTypes.h  ballcontrol.cpp  balldetector.cpp  ballhandling.cpp  camera.cpp  commands.cpp  compass.cpp  goaldetector.cpp  pathfinding.cpp  positioning.cpp  shooting  shooting.cpp  shootingLever.cpp  strategy.cpp  tactics.cpp  wheelcontrol.cpp  world.cpp
turtle5k/src/hardware/: BallHandlingTestStub.cpp  Compass.cpp  CompassTestStub.cpp  IBallHandling.cpp  ICompass.cpp  IMovement.cpp  IShootingLever.cpp  Movement.cpp  MovementTestStub.cpp  ShootingLever.cpp  ShootingLeverTestStub.cpp
turtle5k/src/hardware/headers/: BallHandling.h  BallHandlingTestStub.h  Compass.h  CompassTestStub.h  IBallHandling.h  IMovement.h  IShootingLever.h  Movement.h  MovementTestStub.h  ShootingLever.h  ShootingLeverTestStub.h
turtle5k/src/stubs/: Ball-Handling.cpp  ballhandling.cpp  ballhandlingStub.cpp  compassStub.cpp  movementStub.cpp  shootingLeverStub.cpp
turtle5k/src/stubs/hardware/: Movement.cpp
turtle5k/src/stubs/hardware/headers/: BallHandlingTestStub.h  ICompass.h  Movement.h  ShootingLeverTestStub.h
turtle5k/src/turtle5k/: CMakeLists.txt
turtle5k/src/turtle5k/src/: BallHandling.cpp  Localisation.cpp  Pathfinding.cpp
turtle5k_drive_system/: control_motors_no_joystick_twist.launch  package.xml
turtle5k_drive_system/5KdriveWithVC/: 5Kdrive.atsuo  5Kdrive.cproj  5KdriveV11.cproj  OriginalCode.hex
turtle5k_drive_system/linuxScript/: ssh$HOSTNAMEstartup.sh
turtle5k_drive_system/src/: calculate_velocity_node.cpp  motor_driver_node.cpp  omniWheelMotorDriveCode.c  rpm_sender_multi_array_node.cpp
turtle5kdezyne/: .project  CMakeLists.txt  ExternalInterfaces.dzn  Main.dzn  ReturnResults.dzn  package.xml
turtle5kdezyne/Dezyne Project/: Main.dzn
turtle5kdezyne/launch/: simulation.launch
turtle5kdezyne/msg/: BallLocation.msg
turtle5kdezyne/src/: DataStore.cpp  DataStore.hh  main.cpp
turtle5kdezyne/world/: empty.world
(+186 files in other folders)
